// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders different modal sections 1`] = `
<h4
  class="sc-bxivhb eouofC"
  id="abcdef"
>
  Header
</h4>
`;

exports[`renders different modal sections 2`] = `
<div
  class="sc-EHOje fLjynL"
>
  Body
</div>
`;

exports[`renders different modal sections 3`] = `
<div
  class="sc-bZQynM bxqjbK"
>
  Footer
</div>
`;
